test/positive/big_package/Thing.java
package util;

public class Thing {
    public Thing() {
    }

    public void doStuff(String s) {
    }
}
