test/negative/InterfaceInheritIdenticalSignatures/C.java
package C;
public interface C {
    public void x(); // TODO: is public required here?
}
